@@ -105,6 +105,7 @@ parser_opts = "BLOG_TITLE=${BLOG_TITLE}"     \
 		"BLOG_CHARSET=${BLOG_CHARSET}"           \
 		"POWERED_BY=${POWERED_BY}"               \
 		"POSTED=${POSTED}"                       \
+		"AUTHOR_LABEL=${AUTHOR_LABEL}"           \
 		"PERMALINK_TITLE=${PERMALINK_TITLE}"     \
 		"RSS_FEED_NAME=${RSS_FEED_NAME}"         \
 		"POSTDIR_INDEX=${POSTDIR_INDEX}"         \
@@ -262,6 +263,7 @@ SHORTDATE_${FILE}  != ${date} -d "@${TMSTMP_${FILE}}" +'${SHORT_DATE_FORMAT}'
 DESC_${FILE}       != echo "${DESCRIPTION:S/'/\'/}" |sed -e 's|</a> <a|</a>, <a|g' -e 's/\"/\\"/g'
 TAGS_${FILE}       != echo ${TAGS} |sed -e 's/\([0-9a-zA-Z]*\) \([0-9a-zA-Z]*\)/\1_\2/g' -e 's/^_//g' -e 's/_$$//g' -e 's/,_/, /g' -e 's/_,/ ,/g' -e 's/,/ /g'
 CLASS_TYPE_${FILE} != echo ${TYPE}
+AUTHOR_${FILE}     != echo ${AUTHOR}
 
 .for TAG in ${TAGS_${FILE}}
 TAGLINK_${FILE}_${TAG} != cat "${taglink}" |${parser} \
@@ -275,15 +277,16 @@ TAGLIST_${FILE} != echo "${TAGLIST_TMP_${FILE}}" |sed -e 's|</a> <a|</a>, <a|g' 
 ${TARGET_${FILE}}: ${DESTDIR} ${POSTDIR} ${SRCDIR}/${FILE}
 	$Q{ \
 		{ \
-			cat ${header} | ${parser} ${parser_opts} && \
-			cat ${article} |${parser}                   \
+			cat ${header} | ${parser} ${parser_opts} &&    \
+			cat ${article} |${parser}                      \
 				"CONTENT=${CONTENT_TARGET_${FILE}}"          \
 				"POST_TITLE=${TITLE_${FILE}}"                \
 				"ARTICLE_CLASS_TYPE=${CLASS_TYPE_${FILE}}"   \
-				| sed -e "s|^|        |g" &&              \
-			cat ${footer} | ${parser} ${parser_opts};   \
-		} > ${TARGET_${FILE}} || { \
-			${rm} -f ${TARGET_${FILE}}                           ; \
+				"POST_AUTHOR=${AUTHOR_${FILE}}"              \
+				| sed -e "s|^|        |g" &&                 \
+			cat ${footer} | ${parser} ${parser_opts};      \
+		} > ${TARGET_${FILE}} || {                       \
+			${rm} -f ${TARGET_${FILE}};                    \
 			echo "-- Error while building ${TARGET_${FILE}}." ; \
 			false                                             ; \
 		} ; \
@@ -314,6 +317,7 @@ CONTENT_${FILE}  != head -n ${MAX_POST_LINES} ${SRCDIR}/${NAME_${FILE}:S/${PAGE_
 .endif
 TAGS_${FILE}       != echo ${TAGS} |sed -e 's/\([0-9a-zA-Z]*\) \([0-9a-zA-Z]*\)/\1_\2/g' -e 's/^_//g' -e 's/_$$//g' -e 's/,_/, /g' -e 's/_,/ ,/g' -e 's/,/ /g'
 CLASS_TYPE_${FILE} != echo ${TYPE}
+AUTHOR_${FILE}     != echo ${AUTHOR}
 
 .for TAG in ${TAGS_${FILE}}
 TAGLINK_${FILE}_${TAG} != cat "${taglink}" |${parser} \
@@ -326,22 +330,25 @@ TAGLIST_${FILE} != echo "${TAGLIST_TMP_${FILE}}" |sed -e 's|</a> <a|</a>, <a|g' 
 
 ${TMP_${FILE}}: ${TMPDIR} ${POSTDIR} ${TARGET_${NAME_${FILE}}}
 	@# Template for Post List page
-	$Qcat ${element} | ${parser}              \
+	$Qcat ${element} | ${parser}                 \
 		"POST_TITLE=${TITLE_${FILE}}"              \
 		"DATE=${POSTDATE_${FILE}}"                 \
 		"POST_FILE=${NAME_${FILE}}"                \
 		"SHORT_DATE=${SHORTDATE_${FILE}}"          \
 		"TAG_LINKS_LIST=${TAGLIST_${FILE}}"        \
+		"POST_AUTHOR=${AUTHOR_${FILE}}"            \
+		"ARTICLE_CLASS_TYPE=${CLASS_TYPE_${FILE}}" \
 		> ${TMPDIR}/${FILE}.list
 	@# Template for Home page
 	$Qcat ${article_idx} | ${parser} ${parser_opts} \
-		"CONTENT=${CONTENT_${FILE}}"                 \
-		"TITLE=${TITLE_${FILE}}"                     \
-		"POST_FILE=${NAME_${FILE}}"                  \
-		"DATE=${POSTDATE_${FILE}}"                   \
-		"TAG_LINKS_LIST=${TAGLIST_${FILE}}"          \
-		"POST_TITLE=${TITLE_${FILE}}"                \
-		"ARTICLE_CLASS_TYPE=${CLASS_TYPE_${FILE}}"   \
+		"CONTENT=${CONTENT_${FILE}}"                  \
+		"TITLE=${TITLE_${FILE}}"                      \
+		"POST_FILE=${NAME_${FILE}}"                   \
+		"DATE=${POSTDATE_${FILE}}"                    \
+		"TAG_LINKS_LIST=${TAGLIST_${FILE}}"           \
+		"POST_TITLE=${TITLE_${FILE}}"                 \
+		"POST_AUTHOR=${AUTHOR_${FILE}}"               \
+		"ARTICLE_CLASS_TYPE=${CLASS_TYPE_${FILE}}"    \
 		> ${TMPDIR}/${FILE}
 	@# Add article's title to page's header
 	$Qcat ${POSTDIR}/${NAME_${FILE}} | ${parser} ${parser_opts} \
@@ -353,25 +360,27 @@ ${TMP_${FILE}}: ${TMPDIR} ${POSTDIR} ${TARGET_${NAME_${FILE}}}
 	@# Move temporary file to pub
 	$Q${mv} ${TMPDIR}/${NAME_${FILE}} ${POSTDIR}/${NAME_${FILE}}
 	@# Template for RSS Feed
-	$Qcat ${TMPLDIR}/feed.element.rss | ${parser}     \
+	$Qcat ${TMPLDIR}/feed.element.rss | ${parser}        \
 		"TITLE=${TITLE_${FILE}}"                           \
 		"DESCRIPTION=${DESC_${FILE}}"                      \
 		"LINK=${BASE_URL}/${POSTDIR_NAME}/${NAME_${FILE}}" \
-		> ${TMPDIR}/${FILE}.rss
+		"POST_AUTHOR=${AUTHOR_${FILE}}"                    \
+	> ${TMPDIR}/${FILE}.rss
 	@# Prepare TAGS
 	$Qfor TAG in ${TAGS_${FILE}}; do                             \
-		cat ${tagelement} | ${parser}                           \
-			"TAGLINK=${BASE_URL}/${TAGDIR_NAME}/$${TAG}${PAGE_EXT}" \
+		cat ${tagelement} | ${parser}                              \
+			"TAGLINK=${BASE_URL}/${TAGDIR_NAME}/$${TAG}${PAGE_EXT}"  \
 			"TAGNAME=$${TAG}"                                        \
 		>> ${TMPDIR}/tags.list;                                    \
 	done
 	$Qfor TAG in ${TAGS_${FILE}}; do               \
-		cat ${element} | ${parser} ${parser_opts} \
+		cat ${element} | ${parser} ${parser_opts}    \
 			"POST_TITLE=${TITLE_${FILE}}"              \
 			"DATE=${POSTDATE_${FILE}}"                 \
 			"POST_FILE=${NAME_${FILE}}"                \
 			"SHORT_DATE=${SHORTDATE_${FILE}}"          \
 			"TAG_LINKS_LIST=${TAGLIST_${FILE}}"        \
+			"POST_AUTHOR=${AUTHOR_${FILE}}"            \
 		>> ${TMPDIR}/$${TAG}.tag; \
 	done
 .endfor
