@@ -3,6 +3,6 @@
         ${CONTENT}
       </article>
       <div class="articleinfo">
-        <p>${TAG_TITLE}&#8239;: ${TAG_LINKS_LIST} | <a href="${BASE_URL}/${POSTDIR_NAME}/${POST_FILE}">${PERMALINK_TITLE}</a> | ${POSTED}&#8239;: ${DATE}</p>
+        <p>${TAG_TITLE}&#8239;: ${TAG_LINKS_LIST} | <a href="${BASE_URL}/${POSTDIR_NAME}/${POST_FILE}">${PERMALINK_TITLE}</a> | ${POSTED}&#8239;: ${DATE} | ${AUTHOR_LABEL}&#8239;: ${POST_AUTHOR}</p>
       </div>
 
