@@ -1,1 +1,1 @@
-<p>${SHORT_DATE} - <a href="${BASE_URL}/${POSTDIR_NAME}/${POST_FILE}">${POST_TITLE}</a> - ${TAG_TITLE}&#8239;: ${TAG_LINKS_LIST}</p>
+<p>${SHORT_DATE} - <a href="${BASE_URL}/${POSTDIR_NAME}/${POST_FILE}">${POST_TITLE}</a> - ${POST_AUTHOR} -${TAG_TITLE}&#8239;: ${TAG_LINKS_LIST}</p>
